--- a/src/tiebaSignIn.WebApp/tiebaSignIn.WebApp.csproj
+++ b/src/tiebaSignIn.WebApp/tiebaSignIn.WebApp.csproj
@@ -74,11 +74,15 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\DoSign_PCWebDemo.ashx.cs">
+      <DependentUpon>DoSign_PCWebDemo.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Models\SignInResult.cs" />
     <Compile Include="Models\TiebaSignIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Api\DoSign_PCWebDemo.ashx" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
