--- a/src/tiebaSignIn.WebApp/tiebaSignIn.WebApp.csproj
+++ b/src/tiebaSignIn.WebApp/tiebaSignIn.WebApp.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Content Include="Api\DoSign_PCWebDemo.ashx" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
